---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item,\n\"impl Test { fn test<T1: Numeric, T2: Numeric>() -> void {} }\")"
---
SOURCE_FILE@0..60
  IMPL@0..60
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_TYPE@5..10
          NAME@5..9
            IDENT@5..9 "Test"
          WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..58
      SIG@12..56
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..45
          LESS@19..20 "<"
          BOUND_TYPE@20..31
            NAME@20..22
              IDENT@20..22 "T1"
            CONSTRAINTS@22..31
              COLON@22..23 ":"
              WHITESPACE@23..24 " "
              NAMED_TYPE@24..31
                PATH@24..31
                  PATH_TYPE@24..31
                    NAME@24..31
                      IDENT@24..31 "Numeric"
          COMMA@31..32 ","
          WHITESPACE@32..33 " "
          BOUND_TYPE@33..44
            NAME@33..35
              IDENT@33..35 "T2"
            CONSTRAINTS@35..44
              COLON@35..36 ":"
              WHITESPACE@36..37 " "
              NAMED_TYPE@37..44
                PATH@37..44
                  PATH_TYPE@37..44
                    NAME@37..44
                      IDENT@37..44 "Numeric"
          GREATER@44..45 ">"
        PARAM_LIST@45..47
          LEFT_PAREN@45..46 "("
          RIGHT_PAREN@46..47 ")"
        WHITESPACE@47..48 " "
        RETURN_TYPE@48..56
          ARROW@48..50 "->"
          WHITESPACE@50..51 " "
          NAMED_TYPE@51..56
            PATH@51..56
              PATH_TYPE@51..56
                NAME@51..55
                  IDENT@51..55 "void"
                WHITESPACE@55..56 " "
      BLOCK@56..58
        LEFT_BRACE@56..57 "{"
        RIGHT_BRACE@57..58 "}"
    WHITESPACE@58..59 " "
    RIGHT_BRACE@59..60 "}"
